[ZEPPELIN-6066] Cleanups around Job and Scheduler (#4804)
* Simple changes

* Rename SchedulerThreadFactory to NamedThreadFactory

* some small change in job - SimpleDateFormat is not threadsafe, and there is no need to keep the object in memmory

* Remove change in InterpreterContext